Add Braintree plugin

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,11 @@
         "tabWidth": 4,
         "trailingComma": "all"
       }
-    ]
+    ],
+    "@typescript-eslint/no-use-before-define": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "no-use-before-define": "off"
   },
   "settings": {},
   "parser": "@typescript-eslint/parser"
