--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "experimentalDecorators": true,
     "target": "es2017",
     "strict": true,
+    "strictPropertyInitialization": false,
     "sourceMap": false,
     "outDir": "./dist",
     "baseUrl": "./"
