Fix broken build script
Fixes #3. This change omits the admin ui extension sources from the TypeScript compilations step, and instead copies them intact using Gulp. It also adds a check to the config file to load migrations from the correct location.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,15 @@
     "strictPropertyInitialization": false,
     "sourceMap": false,
     "outDir": "./dist",
+    "skipLibCheck": true,
     "baseUrl": "./"
   },
-  "exclude": ["node_modules", "migration.ts"]
+  "exclude": [
+    "node_modules",
+    "migration.ts",
+    "gulpfile.ts",
+    "migrations/*.ts",
+    "src/plugins/**/ui/*",
+    "**/*.spec.ts"
+  ]
 }
