--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "run:server": "ts-node ./src/index.ts",
     "run:worker": "ts-node ./src/index-worker.ts",
     "start": "concurrently yarn:run:*",
-    "build": "tsc",
+    "build": "rimraf dist && tsc && tsc -p tsconfig.migrations.json && gulp build",
     "generate-types": "graphql-codegen --config ./codegen.json",
     "migration:generate": "ts-node migration generate",
     "migration:run": "ts-node migration run",
@@ -15,10 +15,10 @@
     "e2e:reviews": "jest --config src/plugins/reviews/e2e/config/jest-config.js"
   },
   "dependencies": {
-    "@vendure/admin-ui-plugin": "0.6.1",
-    "@vendure/asset-server-plugin": "0.6.1",
-    "@vendure/core": "0.6.1",
-    "@vendure/email-plugin": "0.6.1",
+    "@vendure/admin-ui-plugin": "0.7.0",
+    "@vendure/asset-server-plugin": "0.7.0",
+    "@vendure/core": "0.7.0",
+    "@vendure/email-plugin": "0.7.0",
     "braintree": "^2.21.0",
     "sqlite3": "4.1.0"
   },
@@ -29,14 +29,16 @@
     "@graphql-codegen/typescript-compatibility": "^1.8.3",
     "@graphql-codegen/typescript-operations": "^1.8.3",
     "@types/braintree": "^2.20.0",
+    "@types/gulp": "^4.0.6",
     "@types/jest": "^24.0.23",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
-    "@vendure/testing": "^0.6.1",
+    "@vendure/testing": "^0.7.0",
     "concurrently": "5.0.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "gulp": "^4.0.2",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "ts-jest": "^24.2.0",
