Fix e2e tests for reviews plugin

--- a/src/plugins/reviews/e2e/config/tsconfig.e2e.json
+++ b/src/plugins/reviews/e2e/config/tsconfig.e2e.json
@@ -3,11 +3,11 @@
   "compilerOptions": {
     "types": ["jest", "node"],
     "lib": ["es2015"],
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "inlineSourceMap": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "allowJs": true
+    "allowJs": false
   },
   "include": ["../*.e2e-spec.ts"]
 }
