--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "populate": "ts-node populate.ts",
-    "compile-admin-ui": "ts-node compile-admin-ui.ts",
+    "compile-admin-ui": "ts-node src/compile-admin-ui.ts",
     "run:server": "ts-node ./src/index.ts",
     "run:worker": "ts-node ./src/index-worker.ts",
     "start": "concurrently yarn:run:*",
-    "build": "rimraf dist && tsc && tsc -p tsconfig.migrations.json && gulp build",
+    "build": "rimraf dist && rimraf admin-ui && tsc && tsc -p tsconfig.migrations.json && yarn compile-admin-ui",
     "generate-types": "graphql-codegen --config ./codegen.json",
     "migration:generate": "ts-node migration generate",
     "migration:run": "ts-node migration run",
@@ -32,7 +32,6 @@
     "@graphql-codegen/typescript-compatibility": "^1.8.3",
     "@graphql-codegen/typescript-operations": "^1.8.3",
     "@types/braintree": "^2.20.0",
-    "@types/gulp": "^4.0.6",
     "@types/jest": "^24.0.23",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.8.0",
@@ -42,7 +41,6 @@
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "gulp": "^4.0.2",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "ts-jest": "^24.2.0",
