Update eslint & related deps

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,12 +21,14 @@
         "singleQuote": true,
         "tabWidth": 4,
         "trailingComma": "all",
-        "printWidth": 110
+        "printWidth": 110,
+        "arrowParens": "avoid"
       }
     ],
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "no-use-before-define": "off"
   },
   "settings": {},
