--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "e2e:reviews": "jest --config src/plugins/reviews/e2e/config/jest-config.js"
   },
   "dependencies": {
-    "@vendure/admin-ui-plugin": "~0.18.0",
-    "@vendure/asset-server-plugin": "~0.18.0",
-    "@vendure/core": "~0.18.0",
-    "@vendure/email-plugin": "~0.18.0",
-    "@vendure/ui-devkit": "~0.18.0",
+    "@vendure/admin-ui-plugin": "^1.0.0-beta.2",
+    "@vendure/asset-server-plugin": "^1.0.0-beta.2",
+    "@vendure/core": "^1.0.0-beta.2",
+    "@vendure/email-plugin": "^1.0.0-beta.2",
+    "@vendure/ui-devkit": "^1.0.0-beta.2",
     "braintree": "^3.0.0",
     "sqlite3": "4.1.0"
   },
@@ -36,7 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "@vendure/create": "0.12.2",
-    "@vendure/testing": "~0.17.0",
+    "@vendure/testing": "^1.0.0-beta.2",
     "concurrently": "5.3.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
@@ -46,8 +46,5 @@
     "ts-jest": "^26.4.1",
     "ts-node": "9.0.0",
     "typescript": "4.0.3"
-  },
-  "resolutions": {
-    "tslib": "1.11.2"
   }
 }
