--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "migration:run": "ts-node migration run",
     "migration:revert": "ts-node migration revert",
     "lint:fix": "eslint ./src/ --ext .ts --fix",
-    "e2e:reviews": "jest --config src/plugins/reviews/e2e/config/jest-config.js"
+    "e2e:reviews": "jest --config src/plugins/reviews/e2e/config/jest-config.js --runInBand"
   },
   "dependencies": {
     "@vendure/admin-ui-plugin": "^1.0.0-beta.2",
