--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "e2e:reviews": "jest --config src/plugins/reviews/e2e/config/jest-config.js --runInBand"
   },
   "dependencies": {
-    "@vendure/admin-ui-plugin": "^1.0.0-beta.2",
-    "@vendure/asset-server-plugin": "^1.0.0-beta.2",
-    "@vendure/core": "^1.0.0-beta.2",
-    "@vendure/email-plugin": "^1.0.0-beta.2",
-    "@vendure/ui-devkit": "^1.0.0-beta.2",
-    "better-sqlite3": "^7.1.5",
+    "@vendure/admin-ui-plugin": "^1.0.0",
+    "@vendure/asset-server-plugin": "^1.0.0",
+    "@vendure/core": "^1.0.0",
+    "@vendure/email-plugin": "^1.0.0",
+    "@vendure/ui-devkit": "^1.0.0",
+    "better-sqlite3": "^7.4.0",
     "braintree": "^3.0.0"
   },
   "devDependencies": {
@@ -35,8 +35,8 @@
     "@types/jest": "^26.0.14",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
-    "@vendure/create": "0.12.2",
-    "@vendure/testing": "^1.0.0-beta.2",
+    "@vendure/create": "^1.0.0",
+    "@vendure/testing": "^1.0.0",
     "concurrently": "5.3.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
