--- a/package.json
+++ b/package.json
@@ -17,26 +17,26 @@
     "e2e:reviews": "jest --config src/plugins/reviews/e2e/config/jest-config.js --runInBand"
   },
   "dependencies": {
-    "@vendure/admin-ui-plugin": "^1.0.0",
-    "@vendure/asset-server-plugin": "^1.0.0",
-    "@vendure/core": "^1.0.0",
-    "@vendure/email-plugin": "^1.0.0",
-    "@vendure/ui-devkit": "^1.0.0",
+    "@vendure/admin-ui-plugin": "^1.3.4",
+    "@vendure/asset-server-plugin": "^1.3.4",
+    "@vendure/core": "^1.3.4",
+    "@vendure/email-plugin": "^1.3.4",
+    "@vendure/ui-devkit": "^1.3.4",
     "better-sqlite3": "^7.4.0",
     "braintree": "^3.0.0"
   },
   "devDependencies": {
-    "@graphql-codegen/add": "^2.0.1",
-    "@graphql-codegen/cli": "^1.17.10",
-    "@graphql-codegen/typescript": "1.17.10",
-    "@graphql-codegen/typescript-compatibility": "^2.0.0",
-    "@graphql-codegen/typescript-operations": "^1.17.8",
+    "@graphql-codegen/add": "2.0.2",
+    "@graphql-codegen/cli": "1.21.1",
+    "@graphql-codegen/typescript": "1.21.0",
+    "@graphql-codegen/typescript-compatibility": "2.0.1",
+    "@graphql-codegen/typescript-operations": "1.17.14",
     "@types/braintree": "^2.22.4",
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
-    "@vendure/create": "^1.0.0",
-    "@vendure/testing": "^1.0.0",
+    "@vendure/create": "^1.3.4",
+    "@vendure/testing": "^1.3.4",
     "concurrently": "6.3.0",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
