--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "@vendure/core": "^1.3.4",
     "@vendure/email-plugin": "^1.3.4",
     "@vendure/ui-devkit": "^1.3.4",
-    "better-sqlite3": "^7.4.0",
-    "braintree": "^3.0.0"
+    "better-sqlite3": "^7.4.0"
   },
   "devDependencies": {
     "@graphql-codegen/add": "2.0.2",
@@ -31,7 +30,6 @@
     "@graphql-codegen/typescript": "1.21.0",
     "@graphql-codegen/typescript-compatibility": "2.0.1",
     "@graphql-codegen/typescript-operations": "1.17.14",
-    "@types/braintree": "^2.22.4",
     "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
