--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "migration:run": "ts-node migration run",
     "migration:revert": "ts-node migration revert",
     "lint:fix": "eslint ./src/ --ext .ts --fix",
-    "e2e:reviews": "jest --config src/plugins/reviews/e2e/config/jest-config.js --runInBand"
+    "e2e:reviews": "vitest --config src/plugins/reviews/e2e/config/vitest.config.js"
   },
   "dependencies": {
     "@nestjs/graphql": "^10.2.0",
