--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@vendure/asset-server-plugin": "^2.0.0",
     "@vendure/core": "^2.0.0",
     "@vendure/email-plugin": "^2.0.0",
-    "better-sqlite3": "^8.4.0"
+    "better-sqlite3": "^8.4.0",
+    "dotenv-flow": "^3.2.0",
+    "fs-extra": "^11.1.1",
+    "pg": "^8.11.0",
+    "url": "^0.11.1"
   },
   "devDependencies": {
     "@graphql-codegen/add": "5.0.0",
