Fix tsconfig for build
The "codegen.ts" was not being excluded and was causing the built files to get nested inside src/

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "node_modules",
     "migration.ts",
     "populate.ts",
+    "codegen.ts",
     "migrations/*.ts",
     "**/*.spec.ts",
     "src/plugins/**/ui/*",
